[gd_scene load_steps=2 format=3 uid="uid://dj2jvqo4rhxxy"]

[ext_resource type="Script" path="res://Tests/Script/FirebaseTest.gd" id="1_p6jx7"]

[node name="FirebaseTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6jx7")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Firebase Integration Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 70.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Ready to run tests"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 120.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TestResults" type="TextEdit" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
editable = false
context_menu_enabled = false
wrap_mode = 1

[node name="RunTestsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Run Tests"

[node name="ClearButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Clear Results"
